--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,34 @@
 body {
   margin: 0;
   padding: 0;
+  font-family: sans-serif;
+  background: #222;
+}
+
+.App {
+  text-align: center;
+}
+
+.App-header {
+  background-color: #111;
+  height: 60px;
+  padding: 20px;
+  color: white;
+}
+
+.App-title {
+  font-size: 1.5em;
+}
+
+.App-intro {
+  font-size: large;
+}
+
+@keyframes App-logo-spin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
+}
+
+h3 {
+  color: #FFF;
 }
