--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,14 @@ body {
 
 .App-header {
   background-color: #111;
-  height: 60px;
   padding: 20px;
-  color: white;
+  color: #fff;
+}
+
+.App-logo {
+  text-decoration: none;
+  font-size: 20px;
+  color: #fff;
 }
 
 .App-title {
